namespace java com.abin.lee.thrift.rpc.model


struct OrderInfo
{
  1:  i64 orderId,
  2:  string orderName,
  3:  double orderPrice,
  4:  string source,
  5:  i64 orderInventory
}



